--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,11 +4,13 @@ services:
     container_name: dynamodb-local
     ports:
       - "8000:8000"
-    command: ["-jar", "DynamoDBLocal.jar", "-sharedDb", "-inMemory"]
+    command: ["-jar", "DynamoDBLocal.jar", "-sharedDb"]
     environment:
       - AWS_ACCESS_KEY_ID=dummy
       - AWS_SECRET_ACCESS_KEY=dummy
       - AWS_DEFAULT_REGION=us-east-1
+    volumes:
+      - ./dynamodb-data:/home/dynamodblocal/data
 
   dynamodb-admin:
     image: aaronshaf/dynamodb-admin:latest
